[package]
name = "cindy-web"
version = "0.1.0"
edition = "2024"
publish = false
description = "Marketing website for Cindy."

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
# `macro` (default) provides the code!/code_str! macros and always bundles the
# Rust grammar (used for the minimal example). `lang-bash` adds the Bash
# grammar for the shell snippet — other languages are opt-in like this.
dioxus-code = { version = "0.1", features = ["lang-bash"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
